--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ TaraOSv1/artifacts
 TaraOSv1/*.exe
 TaraOSv1/*.dll
 TaraOSv1/*.json
-TaraOS Compile\ Tool/.vs
-TaraOS Compile\ Tool/TaraOS\ Compile Tool/bin
-TaraOS Compile\ Tool/TaraOS\ Compile Tool/obj
+TaraOS\ Compile\ Tool/.vs
+TaraOS\ Compile\ Tool/bin
+TaraOS\ Compile\ Tool/obj
 .DS_Store
 .vscode
