--- a/TaraOS Compile Tool/TaraOS Compile Tool.csproj
+++ b/TaraOS Compile Tool/TaraOS Compile Tool.csproj
@@ -1,25 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<RuntimeIdentifiers>win-x64;osx-x64</RuntimeIdentifiers>
-	<TargetFramework>net6.0</TargetFramework>
+	<TargetFrameworks>net6.0</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <RootNamespace>TaraOS_Compile_Tool</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
-	<SelfContained>true</SelfContained>
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <OutputPath>..\TaraOSv1</OutputPath>
+    <StartupObject>TaraOS_Compile_Tool.TaraOSCTool</StartupObject>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>embedded</DebugType>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>embedded</DebugType>
-  </PropertyGroup>
-
 </Project>
