--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,17 @@ TaraOSv1/*.exe
 TaraOSv1/*.dll
 TaraOSv1/*.json
 TaraOSv1/*.pdb
+
+TaraOSv1/TaraOS\ Compile\ Tool
 TaraOS\ Compile\ Tool/.vs
 TaraOS\ Compile\ Tool/bin
 TaraOS\ Compile\ Tool/obj
-.DS_Store
-.vscode
+
+TaraOSv1/TaraOS Compile Tool
 TaraOS Compile Tool/TaraOS Compile Tool/obj/
-.vs
+TaraOS Compile Tool/TaraOS Compile Tool/bin/
+TaraOS Compile Tool/TaraOS Compile Tool/.vs/
+
+.DS_Store
+.vscod
+
